--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Netflix Clone</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Netflix Clone/style.css">
 </head>
 <body>
     <div class="header">
         <nav>
-            <img src="img/logo.png" class="logo">
+            <img src="Netflix Clone/img/logo.png" class="logo">
             <div>
-                <button class="language-btn">English <img src="img/down-icon.png"></button>
+                <button class="language-btn">English <img src="Netflix Clone/img/down-icon.png"></button>
                 <button>Sign In</button>
             </div>
         </nav>
@@ -33,7 +33,7 @@
             <p>Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray players and more.</p>
         </div>
         <div class="img-col">
-            <img src="img/feature-1.png">
+            <img src="Netflix Clone/img/feature-1.png">
         </div>
     </div>
 </div>
@@ -41,7 +41,7 @@
 <div class="features">
     <div class="row">
         <div class="img-col">
-            <img src="img/feature-2.png">
+            <img src="Netflix Clone/img/feature-2.png">
         </div>
         <div class="text-col">
             <h2><b>Download your shows to watch offline</b></h2>
@@ -57,7 +57,7 @@
             <h2><b>Watch everywhere</b></h2>
             <p>Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV.</p>
         </div>
-        <div class="img-col">
+        <div class="Netflix Clone/img-col">
             <img src="img/feature-3.png">
         </div>
     </div>
@@ -68,7 +68,7 @@
         <div class="img-col">
             <img src="img/feature-4.png">
         </div>
-        <div class="text-col">
+        <div class="Netflix Clone/text-col">
             <h2><b>Create profiles for kids</b></h2>
             <p>Send children on adventures with their favourite characters in a space made just for them—free with your membership.</p>
         </div>
