--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
             <h2><b>Watch everywhere</b></h2>
             <p>Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV.</p>
         </div>
-        <div class="Netflix Clone/img-col">
-            <img src="img/feature-3.png">
+        <div class="img-col">
+            <img src="Netflix Clone/img/feature-3.png">
         </div>
     </div>
 </div>
@@ -66,9 +66,9 @@
 <div class="features">
     <div class="row">
         <div class="img-col">
-            <img src="img/feature-4.png">
+            <img src="Netflix Clone/img/feature-4.png">
         </div>
-        <div class="Netflix Clone/text-col">
+        <div class="text-col">
             <h2><b>Create profiles for kids</b></h2>
             <p>Send children on adventures with their favourite characters in a space made just for them—free with your membership.</p>
         </div>
