--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
             <p>Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray players and more.</p>
         </div>
         <div class="img-col">
-            <img src="img/feature-1.png">
+            <img src="Netflix Clone/img/feature-1.png">
         </div>
     </div>
 
 <!-----------------features-2------------------->
     <div class="row">
         <div class="img-col">
-            <img src="img/feature-2.png">
+            <img src="Netflix Clone/img/feature-2.png">
         </div>
         <div class="text-col">
             <h2><b>Download your shows to watch offline</b></h2>
@@ -56,7 +56,7 @@
             <p>Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV.</p>
         </div>
         <div class="img-col">
-            <img src="img/feature-3.png">
+            <img src="Netflix Clone/img/feature-3.png">
         </div>
     </div>
 
@@ -64,7 +64,7 @@
 
     <div class="row">
         <div class="img-col">
-            <img src="img/feature-4.png">
+            <img src="Netflix Clone/img/feature-4.png">
         </div>
         <div class="text-col">
             <h2><b>Create profiles for kids</b></h2>
